import { TestPresetEntryV4 } from "@dendronhq/common-test-utils";
import { ENGINE_HOOKS } from "../../../presets";
import { DendronASTDest, MDUtilsV4 } from "@dendronhq/engine-server";
import { runEngineTestV5 } from "../../../engine";
import { checkNotInVFile, checkVFile, createProcTests } from "./utils";
import { ConfigUtils } from "@dendronhq/common-all";
import { TestConfigUtils } from "../../..";

describe("containers", () => {
  const containerText = [
    "::: aside class-one class-two",
    "# Header One",
    "With container contents. ",
    ":::",
  ].join("\n");
  const REGULAR_CASE = createProcTests({
    name: "REGULAR_CASE",
    setupFunc: async ({ engine, vaults, extra }) => {
      // create copy of engine config
      const config = { ...engine.config };
      ConfigUtils.setSiteProp(config, "useContainers", true);
      if (extra.dest !== DendronASTDest.HTML) {
        const proc = MDUtilsV4.procFull({
          engine,
          config,
          fname: "foo",
          dest: extra.dest,
          vault: vaults[0],
        });
        const resp = await proc.process(containerText);
        return { resp };
      } else {
        const proc = MDUtilsV4.procHTML({
          engine,
          config,
          fname: "foo",
          noteIndex: engine.notes["foo"],
          vault: vaults[0],
        });
        const resp = await proc.process(containerText);
        return { resp };
      }
    },
    verifyFuncDict: {
      [DendronASTDest.MD_DENDRON]: async ({ extra }) => {
        const { resp } = extra;
        await checkVFile(
          resp,
          "::: aside class-one class-two",
          "# Header One",
          "With container contents. ",
          ":::"
        );
      },
      [DendronASTDest.HTML]: async ({ extra }) => {
        const { resp } = extra;
        await checkVFile(
          resp,
          '<aside class="class-one class-two"><h1 id="header-one"><a aria-hidden="true" class="anchor-heading icon-link" href="#header-one"></a>Header One</h1><p>With container contents. </p></aside>'
        );
      },
    },
    preSetupHook: async (opts) => {
      await ENGINE_HOOKS.setupBasic(opts);
      TestConfigUtils.withConfig(
        (config) => {
          const v4DefaultConfig = ConfigUtils.genDefaultV4Config();
          ConfigUtils.setVaults(v4DefaultConfig, ConfigUtils.getVaults(config));
          return v4DefaultConfig;
        },
        { wsRoot: opts.wsRoot }
      );
    },
  });
  const NOT_ENABLED = createProcTests({
    name: "NOT_ENABLED",
    setupFunc: async ({ engine, vaults, extra }) => {
      // create copy of engine config
      let config = { ...engine.config };
      if (extra.dest !== DendronASTDest.HTML) {
        const proc = MDUtilsV4.procFull({
          engine,
          config,
          fname: "foo",
          dest: extra.dest,
          vault: vaults[0],
        });
        const resp = await proc.process(containerText);
        return { resp };
      } else {
        const proc = MDUtilsV4.procHTML({
          engine,
          config,
          fname: "foo",
          noteIndex: engine.notes["foo"],
          vault: vaults[0],
        });
        const resp = await proc.process(containerText);
        return { resp };
      }
    },
    verifyFuncDict: {
      [DendronASTDest.MD_DENDRON]: async ({ extra }) => {
        const { resp } = extra;
        await checkVFile(
          resp,
          "::: aside class-one class-two",
          "# Header One",
          "With container contents. ",
          ":::"
        );
      },
      [DendronASTDest.HTML]: async ({ extra }) => {
        const { resp } = extra;
        await checkNotInVFile(
          resp,
          '<aside class="class-one class-two"><h1 id="header-one"><a aria-hidden="true" class="anchor-heading icon-link" href="#header-one"></a>Header One</h1><p>With container contents. </p></aside>'
        );
      },
    },
    preSetupHook: async (opts) => {
      await ENGINE_HOOKS.setupBasic(opts);
      TestConfigUtils.withConfig(
        (config) => {
          const v4DefaultConfig = ConfigUtils.genDefaultV4Config();
          ConfigUtils.setVaults(v4DefaultConfig, ConfigUtils.getVaults(config));
          return v4DefaultConfig;
        },
        { wsRoot: opts.wsRoot }
      );
    },
  });

  const ALL_TEST_CASES = [...REGULAR_CASE, ...NOT_ENABLED];
  test.each(
    ALL_TEST_CASES.map((ent) => [`${ent.dest}: ${ent.name}`, ent.testCase])
    // @ts-ignore
  )("%p", async (_key, testCase: TestPresetEntryV4) => {
    await runEngineTestV5(testCase.testFunc, {
      expect,
      preSetupHook: testCase.preSetupHook,
    });
  });
});
